--- a/index.html
+++ b/index.html
@@ -11,9 +11,41 @@
 </head>
 
 <body>
-  <div class="container">
-    <h1>Hello world</h1>
-  </div>
+  <header class="header">
+    <div class="container">
+      <a class="header__logo" href="index.html">
+        <img class="header__logo-img" src="img/logo.svg" alt="Logo">
+      </a>
+      <nav class="header__menu menu">
+        <ul class="menu-list">
+          <li class="menu-item">
+            <a class="menu-link" href="">Главная</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link" href="">Сеансы</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link" href="">Отзывы</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link" href="">Контакты</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link" href="">Новости</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link" href="">Обо мне</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link" href="">Блог</a>
+          </li>
+        </ul>
+      </nav>
+      <!-- /.menu -->
+      <button class="header__button">Записаться на сеанс</button>
+    </div>
+    <!-- /.container -->
+  </header>
 </body>
 
 </html>
