added section hero

--- a/index.html
+++ b/index.html
@@ -46,6 +46,18 @@
     </div>
     <!-- /.container -->
   </header>
+
+  <section class="hero">
+    <div class="container hero__container">
+      <div class="hero__content">
+        <div class="hero__text">
+          <p class="hero__text-subtitle">Укрепление здоровья</p>
+          <h1 class="hero__text-title">Акватерапия RitmStyle</h1>
+        </div>
+        <!-- /.hero__text -->
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
