added sessions section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <header class="header">
-    <div class="container">
+    <div class="container header__container">
       <a class="header__logo" href="index.html">
         <img class="header__logo-img" src="img/logo.svg" alt="Logo">
       </a>
@@ -56,7 +56,35 @@
         </div>
         <!-- /.hero__text -->
       </div>
+      <!-- /.hero__content -->
     </div>
+    <!-- /.hero__container -->
+  </section>
+
+  <section class="session">
+    <div class="container">
+      <div class="session__title">
+        <h2 class="session__title-text section-title">Сеансы RitmStyle</h2>
+      </div>
+      <div class="session__grid">
+        <div class="session__card session__card-box-1">
+          <h3 class="session__card-title">Стандартный RitmStyle</h3>
+        </div>
+        <div class="session__card session__card-box-2">
+          <h3 class="session__card-title">RitmStyle для пар</h3>
+        </div>
+        <div class="session__card session__card-box-3">
+          <h3 class="session__card-title">RitmStyle для беременных</h3>
+        </div>
+        <div class="session__card session__card-box-4">
+          <h3 class="session__card-title">RitmStyle с полным погружением под воду</h3>
+        </div>
+        <div class="session__card session__card-box-5">
+          <h3 class="session__card-title">RitmStyle + красочная подводная фотосессия</h3>
+        </div>
+      </div>
+    </div>
+    <!-- /.container -->
   </section>
 </body>
 
